...
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/ingredient_input"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_conversion_absoluteHeight="383dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <TextView
                android:id="@+id/sort_ingredient_info"
...
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="363dp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="0dp" />

            <Spinner
                android:id="@+id/sort_ingredient_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:minHeight="32dp"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="48dp"
...
                tools:layout_editor_absoluteY="0dp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_listview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="64dp"
            android:background="@color/background" />

    </LinearLayout>
...
