...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_layout"
    tools:context="com.androidimpact.app.activities.MainActivity">



    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/confetti_view"
...
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/combined_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
...
                app:menu="@menu/bottom_nav" />

        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/navbarFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:backgroundTint="@color/purple_700"
            android:clickable="true"
            android:contentDescription="@string/navbar_fab"
...
